--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
     "tsx": "^4.11.0",
     "typescript": "^5.4.5"
@@ -25,8 +26,5 @@
     "axios": "^1.7.2",
     "express": "^4.19.2",
     "jest": "^29.7.0"
-  },
-  "jest": {
-    "verbose": true
   }
 }
